--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,8 +9,8 @@
             "server": "localhost",
             "port": 3306,
             "driver": "MySQL",
-            "name": "test",
-            "database": "dummy",
+            "name": "raindropDB",
+            "database": "raindropDB",
             "username": "root"
         }
     ]
