--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,3 @@
 {
-    "sqltools.connections": [
-        {
-            "mysqlOptions": {
-                "authProtocol": "default",
-                "enableSsl": "Disabled"
-            },
-            "previewLimit": 50,
-            "server": "localhost",
-            "port": 3306,
-            "driver": "MySQL",
-            "name": "raindropDB",
-            "database": "raindropDB",
-            "username": "root"
-        }
-    ]
+    "sqltools.connections": []
 }
