--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
     "mysql": "^2.18.1",
-    "pg": "^8.11.2"
+    "pg": "^8.11.2",
+    "postgres": "^3.3.5"
   }
 }
