--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.4.13",
     "postgres": "^3.3.5",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
