--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.5.7",
-    "bootstrap": "^5.3.1",
     "drizzle-orm": "^0.28.2",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
     "postgres": "^3.3.5",
     "react": "18.2.0",
-    "react-bootstrap": "^2.8.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@types/react": "18.2.20",
