--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "next": "13.4.13",
     "postgres": "^3.3.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.66.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/react": "18.2.20",
+    "autoprefixer": "^10.4.15",
     "dotenv": "^16.3.1",
-    "drizzle-kit": "^0.19.12"
+    "drizzle-kit": "^0.19.12",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3"
   }
 }
