--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "drizzle-orm": "^0.28.2",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
-    "next": "13.4.13",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-7118f5dd7-20230705",
+    "next": "^14.2.3",
     "postgres": "^3.3.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hooks-global-state": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "18.2.20",
