--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.4.13",
     "eslint-plugin-react-hooks": "^5.0.0-canary-7118f5dd7-20230705",
     "next": "^14.2.3",
+    "next-auth": "^4.24.7",
     "postgres": "^3.3.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
