--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postgres": "^3.3.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hooks-global-state": "^2.1.0"
+    "react-hooks-global-state": "^2.1.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/react": "18.2.20",
